--- a/guide.html
+++ b/guide.html
@@ -33,7 +33,7 @@
     </style>
 </head>
 <body>
-    <a href="dizi-211.github.io/ME.html" class="card" target="_blank">
+    <a href="https://dizi-211.github.io/ME.html" class="card" target="_blank">
         <h1>啸迪的小窝</h1>
     </a>
 </body>
