--- a/index.html
+++ b/index.html
@@ -33,8 +33,21 @@
     </style>
 </head>
 <body>
-    <a href="https://dizi-211.github.io/ME.html" class="card" target="_blank">
+    <a href="javascript:void(0);" onclick="openAndClose('dizi-211.github.io/ME.html')" class="card">
         <h1>啸迪的小窝</h1>
     </a>
+    <script>
+        function openAndClose(url) {
+            // 打开新窗口
+            var newWindow = window.open(url, '_blank');
+            // 检查新窗口是否成功打开
+            if (newWindow) {
+                // 关闭当前窗口
+                window.close();
+            } else {
+                alert('请允许弹出窗口以继续。');
+            }
+        }
+    </script>
 </body>
 </html>
