--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </style>
 </head>
 <body>
-    <a href="javascript:void(0);" onclick="openAndClose('dizi-211.github.io/ME.html')" class="card">
+    <a href="javascript:void(0);" onclick="openAndClose('ME.html')" class="card">
         <h1>啸迪的小窝</h1>
     </a>
     <script>
