--- a/ME.html
+++ b/ME.html
@@ -92,7 +92,7 @@
                 </p>
                 <p>
                    如果想看我的，这里是
-                    <a href="http://hym2011.github.io/">
+                    <a href="home.html">
                         我的网站的链接
                     </a>
                     。
