--- a/about.html
+++ b/about.html
@@ -16,7 +16,13 @@
 
     <div class="content">
         <h1>关于我</h1>
-        <p>我们是仁济。</p>
+        <p>
+            我们是仁济。想看仁济详细介绍的看
+            <a herf="ME.html">
+                这里
+            </a>
+            。
+        </p>
     </div>
 </body>
 </html>
