--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <h1>关于我</h1>
         <p>
             我们是仁济。想看仁济详细介绍的看
-            <a herf="ME.html">
+            <a href="ME.html">
                 这里
             </a>
             。
