--- a/about.html
+++ b/about.html
@@ -14,15 +14,49 @@
         <a href="contact.html">联系我们</a>
     </div>
 
-    <div class="content">
-        <h1>关于我</h1>
-        <p>
-            我们是仁济。想看仁济详细介绍的看
-            <a href="ME.html">
-                这里
-            </a>
-            。
-        </p>
+    <div class="container">
+        <header class="header">
+            <div class="profile-image">
+                <img src="https://cdn.luogu.com.cn/upload/image_hosting/xk26f0pt.png" alt="波奇酱可爱捏">
+            </div>
+            <h1>dizi-211</h1>
+            <p>人机 / 二次元</p>
+        </header>
+        <div class="content">
+            <section class="section">
+                <h2>关于我</h2>
+                <p>波门永存————。后藤一里怕人对吧，所以，我不做人了，JOJO！（bushi</p>
+            </section>
+            <section class="section">
+                <h2>技能</h2>
+                <p>会C++，HTML，Python（一点点），还会吃饭和做饭。</p>
+            </section>
+            <section class="section">
+                <h2>项目</h2>
+                <p>
+                    鄙人曾经看着hym2011搭起一个网站，这里是
+                    <a href="http://hym2011.github.io/">
+                        链接
+                    </a>
+                    。
+                </p>
+                <p>
+                   如果想看我的，这里是
+                    <a href="http://hym2011.github.io/">
+                        我的网站的链接
+                    </a>
+                    。
+                </p>
+            </section>
+            <section class="section">
+                <h2>联系我</h2>
+                <p>E-mail：qq30326596@163.com</p>
+                <p>Tel：17698096906</p>
+            </section>
+        </div>
+        <footer class="footer">
+            <p>版权所有 &copy; 2023 徐浩迪</p>
+        </footer>
     </div>
 </body>
 </html>
