--- a/link.html
+++ b/link.html
@@ -17,7 +17,7 @@
     <div class="content">
         <h1>友情链接</h1>
         <p>挂一波，友情链接：</p>
-        <a href="hym2011.github.io" class="button">荒妖冥的小窝</a>
+        <a href="http://hym2011.github.io" class="button">荒妖冥的小窝</a>
     </div>
 </body>
 </html>
