--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
             <h1>dizi-211</h1>
             <p>人机 / 二次元</p>
         </header>
-        <div class="content">
+        <div class="contentline">
             <section class="section">
                 <h2>关于我</h2>
                 <p>波门永存————。后藤一里怕人对吧，所以，我不做人了，JOJO！（bushi</p>
