--- a/Sign.html
+++ b/Sign.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="bocchi.ico" type="image/x-icon">
 </head>
 <body>
     <h1>Not Found...</h1>
