--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             color: #333;
         }
     </style>
+    <link rel="icon" href="bocchi.ico" type="image/x-icon">
 </head>
 <body>
     <a href="javascript:void(0);" onclick="openAndClose('home.html')" class="card">
