--- a/about.html
+++ b/about.html
@@ -41,6 +41,13 @@
                     </a>
                     。
                 </p>
+                <p>
+                   如果想看我的，这里是
+                    <a href="http://hym2011.github.io/">
+                        我的网站的链接
+                    </a>
+                    。
+                </p>
             </section>
             <section class="section">
                 <h2>联系我</h2>
@@ -52,6 +59,6 @@
             <p>版权所有 &copy; 2023 徐浩迪</p>
         </footer>
     </div>
-    <button class="top-right-button">登录</button>
+    <a class="button-link" href="sign.html">登录</a>
 </body>
 </html>
