--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,6 @@
         <p>邮箱：qq30326596@163.com</p>
         <p>电话：17698096906</p>
     </div>
-    <button class="top-right-button">登录</button>
+    <a class="button-link" href="sign.html">登录</a>
 </body>
 </html>
