--- a/home.html
+++ b/home.html
@@ -19,6 +19,7 @@
         <h1>首页</h1>
         <p>欢迎来到我的网站！</p>
     </div>
-    <button class="top-right-button">登录</button>
+
+    <a class="button-link" href="sign.html">登录</a>
 </body>
 </html>
