--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
             color: #333;
         }
     </style>
-    <link rel="icon" href="bocchi.ico" type="image/x-icon">
 </head>
 <body>
-    <a href="javascript:void(0);" onclick="openAndClose('home.html')" class="card">
+    <a href="javascript:void(0);" onclick="openAndClose('ME.html')" class="card">
         <h1>啸迪的小窝</h1>
     </a>
     <script>
@@ -50,5 +49,6 @@
             }
         }
     </script>
+
 </body>
 </html>
