--- a/link.html
+++ b/link.html
@@ -20,6 +20,6 @@
         <p>挂一波，友情链接：</p>
         <a href="http://hym2011.github.io" class="button">荒妖冥的小窝</a>
     </div>
-    <button class="top-right-button">登录</button>
+    <a class="button-link" href="sign.html">登录</a>
 </body>
 </html>
