--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <a href="javascript:void(0);" onclick="openAndClose('home.html')" class="card">
-        <h1>啸迪的小窝</h1>
+        <h1>单击以开始</h1>
     </a>
     <script>
         function openAndClose(url) {
