--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         <div class="contentline">
             <section class="section">
                 <h2>关于我</h2>
-                <p>波门永存————。后藤一里怕人对吧，所以，我不做人了，JOJO！（bushi</p>
+                <p>波门永存————！</p>
             </section>
             <section class="section">
                 <h2>技能</h2>
