--- a/link.html
+++ b/link.html
@@ -19,6 +19,9 @@
         <h1>友情链接</h1>
         <p>挂一波，友情链接：</p>
         <a href="http://hym2011.github.io" class="button">荒妖冥的小窝</a>
+        <a href="http://www.luogu.con.cn" class="button">浴谷</a>
+        <a href="http://tboj.cn" class="button">ZYZOJ</a>
+        <a href="http://gxoj.tboj.cn" class="button">本校OJ</a>
     </div>
     <a class="button-link" href="sign.html">登录</a>
 </body>
